--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>May 2024 Code Wars</h1>
-    <p>In console</p>
+    <p>Look in console if you like</p>
 
     <script src="app.js"></script>
 </body>
